[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "optimum-grilly"
version = "0.3.0"
description = "HuggingFace Optimum backend for Grilly — Vulkan GPU inference on any GPU"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Nicolas Cloutier", email = "ncloutier@grillcheeseai.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "optimum>=1.20.0",
    "transformers>=4.40.0",
    "safetensors>=0.4.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = ["grilly>=0.4.5"]
export = ["torch>=2.0.0"]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]
all = ["grilly>=0.4.5", "torch>=2.0.0"]

[project.scripts]
optimum-grilly-export = "optimum.grilly.export:_cli_main"

[project.urls]
Homepage = "https://github.com/grillcheese-ai/optimum-grilly"
Repository = "https://github.com/grillcheese-ai/optimum-grilly"

[tool.setuptools.packages.find]
include = ["optimum*"]
namespaces = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
